Oublie de lien cliquable + correctif bug padding version mobile

--- a/styles.css
+++ b/styles.css
@@ -394,7 +394,7 @@ footer {
     -moz-appearance: none;
     appearance: none;
   }
-  body {
+  main {
     padding: 0;
   }
   /* HEADER */
